# transit-display

./: .env.example  .gitignore  AGENTS.md  AmoledMatrix.cpp  AmoledMatrix.h  AmoledSettings.h  AmoledTouch.cpp  AmoledTouch.h  LICENSE  README.md  SdConfig.cpp  SdConfig.h  Taskfile.yml  TransitClient.cpp  TransitClient.h  TransitConfig.cpp  TransitConfig.h  TransitMath.h  TransitRenderer.cpp  TransitRenderer.h  TransitState.cpp  TransitState.h  compile.sh  example_settings.json  ota_upload.py  pin_config.h  recv_screenshot.py  transit_display.ino
.devcontainer/: Dockerfile  devcontainer.json
backend/: .env.example  Dockerfile  compose.yml  pyproject.toml
backend/config/: profiles.json
backend/src/tests/: test_config.py  test_main.py  test_map_builder.py  test_vbb_client.py  test_vehicle_tracker.py
backend/src/transit_display_backend/: __init__.py  config.py  main.py  map_builder.py  models.py  vbb_client.py  vehicle_tracker.py
docs/superpowers/plans/: 2026-07-03-transit-display-backend-plan.md  2026-07-03-transit-display-firmware-plan.md  2026-07-04-roadmap-features.md
docs/superpowers/specs/: 2026-07-03-tiny-berlin-transit-display-design.md
icons/: README.md  TransportIcons.h  convert.py
lib/GFX_Lite/: library.properties
lib/GFX_Lite/src/: FastLED_Lite_config.h  GFX_Layer.cpp  GFX_Layer.hpp
lib/Matrix/: library.properties
