[project]
name = "transit-display-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "pydantic>=2.7",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8", "respx>=0.21"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
